Since there are valid cases where these can be called, don't assert. Instead, warn so unexpected calls are still flagged. bug 327571, r=jst rs=brendan